# translation-tool-rs

./: Cargo.toml  LICENSE  index.html
src/: app.rs  dqx_iced_ui.rs  dqx_text_model.rs  lib.rs  main.rs
