[package]
name = "dqx_text_tool"
version = "0.0.2"
authors = ["Scott Harper <orcein@gmail.com>"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[dependencies]
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
rfd = "0.14.1"
serde_json = { version = "1.0", features = ["std", "preserve_order"] }
indexmap = { version = "2.2.6", features = ["serde"] }
egui_extras = "0.28.1"
iced = { version = "0.12.1", features = ["highlighter", "debug"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
